--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
-set(CMAKE_CXX_FLAGS -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_CXX_FLAGS
+    -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
 
 project(test)
 add_executable(catch src/cpu.cpp)
