Big changes in service of correctness.
- Adds callback-based cycle stepping. We'll need this (or something better) for any kind of whole-system emulation.
- Fixes several bugs to pass the Klaus' functional tests, Bruce Clark's decimal arithmetic tests, and a timing test from Big Ed.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,10 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
-set(CMAKE_CXX_FLAGS -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_CXX_FLAGS
+    -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
 
 project(test)
-add_executable(catch src/cpu.cpp)
+add_executable(catch src/cpu.cpp src/util.cpp)
 target_include_directories(catch PRIVATE inc ../inc)
 set_property(TARGET catch PROPERTY CXX_STANDARD 17)
 
